# Generated by Django 6.0.1 on 2026-01-27 01:09

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('SGPM', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Asesor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombres', models.CharField(max_length=100)),
                ('apellidos', models.CharField(max_length=100)),
                ('email_asesor', models.EmailField(max_length=254, unique=True)),
                ('rol', models.CharField(choices=[('ASESOR', 'ASESOR'), ('ADMIN', 'ADMIN'), ('OPERADOR', 'OPERADOR')], default='ASESOR', max_length=20)),
                ('activo', models.BooleanField(default=True)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_actualizacion', models.DateTimeField(auto_now=True)),
            ],
            options={
                'db_table': 'asesor',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='Notificacion',
            fields=[
                ('id_notificacion', models.CharField(max_length=50, primary_key=True, serialize=False, unique=True)),
                ('destinatario', models.EmailField(max_length=254)),
                ('tipo', models.CharField(choices=[('RECORDATORIO', 'RECORDATORIO'), ('DOC_FALTANTE', 'DOC_FALTANTE'), ('CITA_PROXIMA', 'CITA_PROXIMA'), ('ASIGNACION_TAREA', 'ASIGNACION_TAREA')], max_length=30)),
                ('mensaje', models.TextField()),
                ('leida', models.BooleanField(default=False)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'db_table': 'notificacion',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='Solicitante',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('cedula', models.CharField(max_length=20, unique=True)),
                ('nombres', models.CharField(max_length=100)),
                ('apellidos', models.CharField(max_length=100)),
                ('correo', models.EmailField(max_length=254)),
                ('telefono', models.CharField(blank=True, max_length=20, null=True)),
                ('fecha_nacimiento', models.DateField(blank=True, null=True)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_actualizacion', models.DateTimeField(auto_now=True)),
            ],
            options={
                'db_table': 'solicitante',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='SolicitudMigratoria',
            fields=[
                ('codigo', models.CharField(max_length=50, primary_key=True, serialize=False, unique=True)),
                ('tipo_servicio', models.CharField(blank=True, choices=[('VISA_TURISMO', 'VISA_TURISMO'), ('VISA_TRABAJO', 'VISA_TRABAJO'), ('ESTUDIOS', 'ESTUDIOS'), ('RESIDENCIA', 'RESIDENCIA')], max_length=20, null=True)),
                ('estado_actual', models.CharField(choices=[('CREADA', 'CREADA'), ('EN_REVISION', 'EN_REVISION'), ('DOCUMENTOS_PENDIENTES', 'DOCUMENTOS_PENDIENTES'), ('ENVIADA', 'ENVIADA'), ('APROBADA', 'APROBADA'), ('RECHAZADA', 'RECHAZADA'), ('CERRADA', 'CERRADA')], default='CREADA', max_length=30)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_expiracion', models.DateTimeField(blank=True, null=True)),
                ('fecha_ultima_actualizacion', models.DateTimeField(auto_now=True)),
                ('fecha_recepcion_docs', models.DateField(blank=True, null=True)),
                ('fecha_envio_solicitud', models.DateField(blank=True, null=True)),
                ('fecha_cita', models.DateField(blank=True, null=True)),
                ('asesor', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='solicitudes_asignadas', to='SGPM.asesor')),
                ('solicitante', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='solicitudes', to='SGPM.solicitante')),
            ],
            options={
                'db_table': 'solicitud_migratoria',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='HistorialFechaProceso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('usuario', models.CharField(max_length=100)),
                ('campo', models.CharField(max_length=50)),
                ('valor_anterior', models.DateField(blank=True, null=True)),
                ('valor_nuevo', models.DateField()),
                ('fecha_cambio', models.DateTimeField(auto_now_add=True)),
                ('solicitud', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='historial_fechas', to='SGPM.solicitudmigratoria')),
            ],
            options={
                'db_table': 'historial_fecha_proceso',
                'ordering': ['-fecha_cambio'],
            },
        ),
        migrations.CreateModel(
            name='HistorialEstadoSolicitud',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('usuario', models.CharField(max_length=100)),
                ('estado_anterior', models.CharField(max_length=30)),
                ('estado_nuevo', models.CharField(max_length=30)),
                ('motivo', models.TextField(blank=True)),
                ('fecha_cambio', models.DateTimeField(auto_now_add=True)),
                ('solicitud', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='historial_estados', to='SGPM.solicitudmigratoria')),
            ],
            options={
                'db_table': 'historial_estado_solicitud',
                'ordering': ['-fecha_cambio'],
            },
        ),
        migrations.CreateModel(
            name='Documento',
            fields=[
                ('id_documento', models.CharField(max_length=50, primary_key=True, serialize=False, unique=True)),
                ('tipo', models.CharField(choices=[('PASAPORTE', 'PASAPORTE'), ('ANTECEDENTES', 'ANTECEDENTES'), ('ESTADOS_BANCARIOS', 'ESTADOS_BANCARIOS'), ('CONTRATO_TRABAJO', 'CONTRATO_TRABAJO'), ('MATRICULA_ESTUDIOS', 'MATRICULA_ESTUDIOS'), ('OTROS', 'OTROS')], max_length=30)),
                ('estado', models.CharField(choices=[('RECIBIDO', 'RECIBIDO'), ('APROBADO', 'APROBADO'), ('RECHAZADO', 'RECHAZADO'), ('VENCIDO', 'VENCIDO')], default='RECIBIDO', max_length=20)),
                ('fecha_expiracion', models.DateField(blank=True, null=True)),
                ('version_actual', models.IntegerField(default=1)),
                ('observacion', models.TextField(blank=True, null=True)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_actualizacion', models.DateTimeField(auto_now=True)),
                ('solicitante', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='documentos', to='SGPM.solicitante')),
                ('solicitud', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='documentos', to='SGPM.solicitudmigratoria')),
            ],
            options={
                'db_table': 'documento',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='Tarea',
            fields=[
                ('id_tarea', models.CharField(max_length=50, primary_key=True, serialize=False, unique=True)),
                ('titulo', models.CharField(max_length=200)),
                ('prioridad', models.CharField(choices=[('BAJA', 'BAJA'), ('MEDIA', 'MEDIA'), ('ALTA', 'ALTA'), ('CRITICA', 'CRITICA')], max_length=20)),
                ('estado', models.CharField(choices=[('PENDIENTE', 'PENDIENTE'), ('EN_PROGRESO', 'EN_PROGRESO'), ('COMPLETADA', 'COMPLETADA'), ('CANCELADA', 'CANCELADA')], default='PENDIENTE', max_length=20)),
                ('vencimiento', models.DateTimeField(blank=True, null=True)),
                ('comentario', models.TextField(blank=True)),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_actualizacion', models.DateTimeField(auto_now=True)),
                ('asignada_a', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='tareas_asignadas', to='SGPM.asesor')),
                ('solicitud', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='tareas', to='SGPM.solicitudmigratoria')),
            ],
            options={
                'db_table': 'tarea',
                'ordering': ['-fecha_creacion'],
            },
        ),
        migrations.CreateModel(
            name='Cita',
            fields=[
                ('id_cita', models.CharField(max_length=50, primary_key=True, serialize=False, unique=True)),
                ('observacion', models.TextField(blank=True)),
                ('tipo', models.CharField(choices=[('CONSULAR', 'CONSULAR'), ('BIOMETRIA', 'BIOMETRIA'), ('ENTREGA_DOCUMENTOS', 'ENTREGA_DOCUMENTOS'), ('ASESORIA', 'ASESORIA')], max_length=30)),
                ('estado', models.CharField(choices=[('PROGRAMADA', 'PROGRAMADA'), ('REPROGRAMADA', 'REPROGRAMADA'), ('COMPLETADA', 'COMPLETADA'), ('CANCELADA', 'CANCELADA'), ('NO_ASISTIO', 'NO_ASISTIO')], default='PROGRAMADA', max_length=20)),
                ('inicio', models.DateTimeField()),
                ('fin', models.DateTimeField()),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True)),
                ('fecha_actualizacion', models.DateTimeField(auto_now=True)),
                ('solicitud', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='citas', to='SGPM.solicitudmigratoria')),
            ],
            options={
                'db_table': 'cita',
                'ordering': ['-fecha_creacion'],
                'constraints': [models.CheckConstraint(condition=models.Q(('fin__gt', models.F('inicio'))), name='cita_fin_mayor_que_inicio')],
            },
        ),
    ]
